--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="asserts/css/styles.css">
+  <script src="asserts/js/scripts.js" ></script>
   <title>teste</title>
 </head>
 <body>
-  
+  <h1>Olá, mundo!</h1>
 </body>
 </html>
