Criando um contador

--- a/index.html
+++ b/index.html
@@ -5,10 +5,18 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="asserts/css/styles.css">
-  <script src="asserts/js/scripts.js" ></script>
-  <title>teste</title>
+  
+  <title>Contador</title>
 </head>
 <body>
   <h1>Olá, mundo!</h1>
+  <p>Este é o meu primeiro projeto JavaScript.</p>
+  <div id="counter">
+    <button name="subtrair" onclick="decrement()">-</button>
+    <span id="currentNumber">0</span>
+    <button name="adicionar" onclick="increment()">+</button>
+  </div>
+<!-- Chamando o arquivo JavaScript -->
+  <script src="asserts/js/scripts.js" ></script>
 </body>
 </html>
