Finalizando a introdução ao JavaScript

--- a/contador/index.html
+++ b/contador/index.html
@@ -20,3 +20,10 @@
   <script src="asserts/js/scripts.js" ></script>
 </body>
 </html>
+
+<!--Dicas
+Caso você queira ir além, aqui estão algumas dicas de coisas para tentar:
+
+Tente implementar os eventos usando o método addEventListener.
+Crie condicionais que desabilitam o botão de incrementar ou decrementar quando count chegar a um determinado valor (ex.: 0 <= count =< 10).
+Mude a cor do texto em CURRENT_NUMBER para vermelho quando o número for negativo. --> 
